--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "next": "10.0.9",
+    "next-pwa": "^5.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "webpack": "4"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -44,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
     "typescript": "^4.2.3"
